result shows when clicking= , can string together multiple operations

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="calBase">
         <div id="display"></div>
         <div id="btnContainer">
+            <button class="btn">0</button>
             <button class="btn">1</button>
             <button class="btn">2</button>
             <button class="btn">3</button>
