Project is done

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <button class="op">-</button> 
             <button class="op">*</button>
             <button class="op">÷</button> 
+            <button id="dot">.</button>
             <button id='equal'>=</button>
             <button id="AC">AC</button> 
   
